# WishList

./: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  run.py
app/: alembic.ini  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 3858d0dca90d_add_column_role.py  7c838b076a09_addedtables.py
app/core/: limit.py
app/database/: database.py
app/models/: present.py  user.py  wishlist.py
app/repositories/: present_repo.py  user_repo.py  wishlist_repo.py
app/routers/: present.py  user.py  wishlist.py
app/schemas/: present.py  user.py  wishlist.py
app/security/: dependencies.py  jwt.py
app/services/: present.py  user.py  wishlist.py
app/tasks/: tasks.py
